# k3d

./: CMakeLists.txt  main.cpp  vcpkg.json
k3d/: App.cpp  App.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h  device.cpp  device.h
shaders/: triangle.frag  triangle.vert
